client/kubernetes-manifests/guacamole-auth-proxy.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-authproxy-client
  namespace: guacamole-new1

spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: guacamole-authproxy-client
  template:
    metadata:
      labels:
        app: guacamole-authproxy-client
    spec:
      serviceAccountName: svc-guacamole-new1
      containers:
      - name: guacamole-authproxy-client
        image: us-central1-docker.pkg.dev/tccc-1009/guac-repo/guacamole-auth-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: serving-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: serving-port
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 60
          timeoutSeconds: 5 
        startupProbe:
          httpGet:
            path: /
            port: serving-port
          failureThreshold: 30
          periodSeconds: 10
          initialDelaySeconds: 20
