client/kubernetes-manifests/guacamole-client.deployment.yaml
# 
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: guacamole-client
    namespace: guacamole-stage1
    labels:
      app: guacamole-client
  spec:
    
    # replicas: not specified here:
    # 1. Default is 1.
    # 2. Will be tuned in real time if DNS horizontal auto-scaling is turned on.
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
    selector:
      matchLabels:
        app: guacamole-client
    template:
      metadata:
        labels:
          app: guacamole-client
      spec:
        serviceAccountName: svc-guacamole-stage1
        containers:
        - name: guacamole-client
          image: guacamole-client-iap
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          resources:
            limits:
              cpu: 1000m
              memory: 2000Mi
            requests:
              cpu: 1000m
              memory: 2000Mi
          ports:
          - containerPort: 8080
            name: serving-port
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /guacamole
              port: serving-port
            failureThreshold: 1
            periodSeconds: 10
            initialDelaySeconds: 60
            timeoutSeconds: 5 
          startupProbe:
            httpGet:
              path: /guacamole
              port: serving-port
            failureThreshold: 30
            periodSeconds: 10
            initialDelaySeconds: 20
        volumes:
          - name: config-volume
            #configMap:
            #  name: java-trust-store
