client/kubernetes-manifests/guacamole-auth-proxy.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-auth-proxy-service
  namespace: guacamole-stage1
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default": "guacamole-config-default"}'
spec:
  type: NodePort
  selector:
    app: guacamole-authproxy-client
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
