client/kubernetes-manifests/guacamole-client.service.yaml
# 
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: guacamole-client-service
  namespace: guacamole-stage1
  #annotations:
  #  cloud.google.com/neg: '{"ingress": true}'
  #  beta.cloud.google.com/backend-config: '{"default": "guacamole-config-default"}'
spec:
  type: NodePort
  selector:
    app: guacamole-client
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
