client/kubernetes-manifests/guacamole-client.ingress.yaml
# 
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: guacamole-client-ingress
    namespace: guacamole-new1
    annotations:
        kubernetes.io/ingress.global-static-ip-name: guacamole-external-new1
        networking.gke.io/managed-certificates: guacamole-client-cert
spec:
    defaultBackend:
        service:
          name: guacamole-auth-proxy-service
          port: 
            number: 80
